# orbit

./: .gitignore  .mcp.json  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  opencode.json  orbit-tabs-git-tree-v1.html  orbit-tabs-git-tree-v2.html  orbit-tabs-v3.html  package-lock.json  package.json  svelte.config.js  test-file.md  vite.config.js
.github/workflows/: build.yml
.opencode/plans/: 2026-04-16-chat-history-ctrlc-tab-dedup.md
api/: App.svelte
api/components/: CentralPanel.svelte  ChangelogModal.svelte  CommandInput.svelte  Feed.svelte  InputBar.svelte  MetaPanel.svelte  NewSessionModal.svelte  Pane.svelte  PaneGrid.svelte  Sidebar.svelte  StatsPanel.svelte  SubagentsPanel.svelte  TasksList.svelte  TasksProgress.svelte  ToolCallEntry.svelte
api/lib/: android-names.test.ts  android-names.ts  tauri.ts
docs/: architecture-review-rust.md  lessons.md  mock-minimal-green.html  mock-modern-green.html  mock-redesign-compact.html  mock-steel-workshop.html  testing-standards-rust.md
docs/plans/: 2026-03-26-at-file-picker-scroll-sound.md  2026-04-06-auto-updater.md  2026-04-06-diff-viewer.md  2026-04-06-session-nickname-and-worktree.md  2026-04-06-ssh-sessions.md  2026-04-07-changelog-modal.md  2026-04-07-workspace-tabs.md  2026-04-08-arch-refactor-priority-red.md  2026-04-08-arch-refactor-yellow-green.md  2026-04-12-openrouter-provider.md  2026-04-12-provider-trait-refactor.md  2026-04-14-merge-ssh-openrouter.md  2026-04-16-permission-system-fix.md
docs/specs/: 2026-03-26-dashboard-overview-design.md  2026-04-06-landing-page-design.md  2026-04-07-changelog-modal-design.md  2026-04-07-split-panes-plan.md  2026-04-14-frontend-structure-design.md  diff-viewer.md  implementation-plan.md  mcp-integration-plan.md  mcp-integration.md  multi-provider.md  openrouter-provider.md  orchestrator.md  paseo-comparison-improvements.md  search-select-component.md  split-panes.md  ssh-sessions.md  workspace-tabs.md
front/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json
front/src/: commands.rs  diff_builder.rs  journal_reader.rs  lib.rs  models.rs
front/src/ipc/: mod.rs  project.rs  session.rs
front/src/services/: database.rs  mod.rs  session_manager.rs  spawn_manager.rs
landing/: astro.config.mjs  package.json
scripts/: gen-icons.mjs  generate-demo-gif.mjs  install-linux.sh  install-macos.sh  install-windows.ps1  seed-mesh-educoins.py  seed-mesh-full-pipeline.py  seed-mesh-pipeline-generic.py  updater-test-server.js
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  bash.exe.stackdump  tauri.conf.json
src-tauri/src/: agent_tree.rs  commands.rs  diff_builder.rs  journal_reader.rs  keystroke_sender.rs  lib.rs  models.rs
src-tauri/src/ipc/: session.rs
src-tauri/src/services/: database.rs  mod.rs  session_manager.rs  spawn_manager.rs
src/components/: AgentCard.svelte  AgentTree.svelte  CentralPanel.svelte  CommandInput.svelte  ContextMenu.svelte  CreateSessionDialog.svelte  DiffView.svelte  FilesImpact.svelte  InputBar.svelte  JournalEntry.svelte  Markdown.svelte  MiniLog.svelte  NewSessionModal.svelte  RightPanel.svelte  Sidebar.svelte  StatsPanel.svelte  SubagentsPanel.svelte  TasksProgress.svelte  ThinkingBlock.svelte  ToolCallEntry.svelte  TypingIndicator.svelte
src/lib/: tauri.ts  types.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: agent_tree.rs  commands.rs  diff_builder.rs  journal_reader.rs  lib.rs  mcp_proxy.rs  mcp_transport.rs  models.rs  test_utils.rs
tauri/src/commands/: agents.rs  diff.rs  files.rs  git.rs  mod.rs  orchestration.rs  plugins.rs  providers.rs  stats.rs  tasks.rs
tauri/src/ipc/: error.rs  http_api.rs  mcp.rs  mesh.rs  mod.rs  project.rs  session.rs  terminal.rs  updater.rs
tauri/src/journal/: mod.rs  parser.rs  processor.rs  state.rs
tauri/src/providers/: acp.rs  claude.rs  codex.rs  mod.rs  opencode.rs
tauri/src/services/: crypto.rs  database.rs  http_server.rs  mcp_config.rs  mod.rs  pty_manager.rs  session_manager.rs  spawn_manager.rs  ssh.rs  worktree.rs
tauri/src/services/mesh/: mod.rs  repo.rs  skills.rs
tauri/tests/: mesh_crud_smoke.rs
ui/: App.svelte  app.css  app.html  themes.css
ui/components/: AgentCard.svelte  AgentTree.svelte  Banner.svelte  CentralPanel.svelte  ChangelogModal.svelte  CommandInput.svelte  ContextMenu.svelte  DiffView.svelte  Feed.svelte  FilesImpact.svelte  GitPanel.svelte  GitTreeNode.svelte  HttpApiSettingsModal.svelte  InputBar.svelte  JournalEntry.svelte  Markdown.svelte  MetaPanel.svelte  MiniLog.svelte  MonacoDiffViewer.svelte  NewSessionModal.svelte  Pane.svelte  PaneGrid.svelte  PermissionDialog.svelte  PhoneLinkModal.svelte  RenameSessionModal.svelte  RightPanel.svelte  Sidebar.svelte  StatsPanel.svelte  SubagentsPanel.svelte  TasksList.svelte  TasksProgress.svelte  TerminalPanel.svelte  ThemePicker.svelte  ThinkingBlock.svelte  Toast.svelte  ToastContainer.svelte  (+4 more)
ui/lib/: qr.ts  (+9 more)
(+98 files in other folders)
