[package]
name = "orbit"
version = "0.1.0"
description = "Orbit — Claude agent dashboard"
authors = ["you"]
edition = "2021"
default-run = "orbit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }


