[package]
name = "orbit"
version = "0.5.0"
description = "Orbit — Claude agent dashboard"
authors = ["you"]
license = "MIT"
edition = "2021"
default-run = "orbit"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orbit-mcp"
path = "src/bin/orbit_mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
portable-pty = "0.9"
agent-client-protocol-schema = "0.11"
tauri-plugin-shell = "2.3.5"

[dev-dependencies]
tempfile = "3"

